# portfolio

./: .dockerignore  .env.age  .env.enc  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyre_configuration  .releaserc  .sops.yaml  .terraformignore  Dockerfile  Jenkinsfile  Makefile  README.md  build.py  flake.nix  fly.toml  package-lock.json  package.json  pyproject.toml  rebase.sh  requirements.txt  shell.nix  sonar-project.properties  sonar-scanner.properties
.circleci/: config.yml
.direnv/: nix-profile-24.05-65xpqkz92d9j7k5r  nix-profile-24.05-65xpqkz92d9j7k5r.rc
.forgejo/workflows/: demo.yml  ggshield.yml  lint.yml  pyre.yml  sonar-scanner.yml
.github/: dependabot.yml
.github/workflows/: dependabot_auto_merge.yaml  docker-publish.yaml  docker-publish.yml  flake-test.yml  gitguardian.yaml  jekyll-gh-pages.yaml  latex.yaml  lint.yaml  security-scan.yaml  semantic-release.yaml  sonarcloud-scanner.yml  terraform.yaml  test.yaml  test.yml
.next/: trace
.next/cache/webpack/client-development/: index.pack.gz.old
.next/server/pages/: _app.js  _document.js  _error.js  index.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: webpack.js
.next/static/chunks/pages/: index.js
.woodpecker/: lint.yaml  wood-lint.yaml
archive/: shell.nix
archive/.circleci/: config.yml
archive/.forgejo/workflows/: ggshield.yml  pyre.yml  sonar-scanner.yml
archive/.github/workflows/: gitguardian.yaml  sonarcloud-scanner.yml
archive/.github/workflows/archive/: test.yml_
docs/: main.tex
docs/langs/bg/: education.tex  experience.tex  languages.tex  skills.tex  summary.tex  volunteering.tex
docs/langs/en/: education.tex  experience.tex  languages.tex  skills.tex  summary.tex  volunteering.tex
docs/langs/fr/: education.tex  experience.tex  languages.tex  skills.tex  summary.tex  volunteering.tex
docs/langs/ge/: education.tex  experience.tex  languages.tex  skills.tex  summary.tex  volunteering.tex
infra/iac/: main.tf  terraform.tf  variables.tf
infra/iac/apps/portfolio/: main.tf  terraform.tf  variables.tf
infra/iac/env/prod/: terraform.tfvars.age
pages/: _app.tsx  index.tsx
src/: manage.py
src/apps/blogs/: apps.py  urls.py
src/apps/blogs/config/: blog.yaml  blog_category.yaml
src/apps/blogs/data_class/: blog.py  blog_category.py  portfolio.py
src/apps/blogs/migrations/: 0001_initial.py  0002_auto_20251004_2227.py  0002_auto_20251021_2319.py  0002_auto_20251022_2256.py  0002_auto_20251111_1741.py  0002_auto_20251111_1921.py  0002_blogs_migrate.py  __init__.py
src/apps/landing_page/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/resume/: apps.py  urls.py
src/portfolio/: asgi.py  dummy_src.py  settings.py  urls.py
src/portfolio/helpers/: client.py  email.py  security_manager.py  utils.py  voice.py
src/portfolio/models/: s3.py
src/portfolio/monitor/: log.py
src/portfolio/routers/: portfolio_router.py
src/static/CACHE/: manifest.json
src/static/scripts/: cookie.js  domContextLoaded.js  fetch_release.js  hover_over_text.js  lazyload.js  scroll.js  toast.js  toggle_theme.js
src/static/style/: default.css  default.scss  home.scss
src/templates/: base.html
src/utils/: amplifyServerUtils.ts
stubs/taint/core_privacy_security/: taint.config
tests/: dummy_tests.py
(+200 files in other folders)
